--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,10 +40,11 @@
         android:id="@+id/about"
         android:layout_marginBottom="50dp"
         android:background="#40ffffff"
-        android:textColor="@color/button_material_light"
+        android:textColor="#ffffff"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/title"
-        android:layout_alignEnd="@+id/title" />
+        android:layout_alignEnd="@+id/title"
+        android:onClick="openWebView"/>
 
     <ImageView
         android:layout_width="116dp"
@@ -59,12 +60,13 @@
         android:text="@string/galleryButton"
         android:id="@+id/gallery_button"
         android:background="#40ffffff"
-        android:textColor="@color/button_material_light"
+        android:textColor="#ffffff"
         android:textSize="17sp"
         android:layout_above="@+id/about"
         android:layout_marginBottom="22dp"
         android:layout_alignStart="@id/about"
         android:layout_alignEnd="@+id/about"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="openGallery" />
 
 </RelativeLayout>
